<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground"
    android:divider="?android:dividerHorizontal"
    android:dividerPadding="8dp">

    <TextView
        android:id="@+id/asignaturaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/pmdm" />

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/título_de_la_tarea"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/descripcionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripción_de_la_tarea"
        android:textColor="#546E7A"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/fechaEntregaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_entrega_20_12_2024"
        android:textColor="#546E7A"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/horaEntregaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_entrega_10_00"
        android:textColor="#546E7A"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/estadoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completada"
        android:textColor="#546E7A"
        android:textSize="12sp" />
</LinearLayout>