<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/editOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/editar"
        android:textAppearance="?attr/textAppearanceListItem"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/deleteOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/eliminar"
        android:textAppearance="?attr/textAppearanceListItem"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/completeOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/marcar_como_completado"
        android:textAppearance="?attr/textAppearanceListItem"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@android:drawable/ic_menu_set_as" />
</LinearLayout>